frontend/test/should_pass/retype_102.grg
using retype_model_002;

rule r {
	pattern {
		a:Node;
		b:Node;
		
		a -x:TYPE1-> b;
		a -w:TYPE1-> b;
	}
	replace {
		a -y:TYPE2<x>-> b;
		a -z:typeof(x)<w>-> b;
	}
}

