frontend/test/should_fail/retype_101.grg
using retype_model_002;

// forbidden, because y is only temporarily existing object

rule r {
	pattern {
		a:Node;
		b:Node;
		
		a -x:TYPE1-> b;
	}
	replace {
		a -y:TYPE2<x>-> b;
		a -z:TYPE3<y>-> b;
	}
}

